Antes de Actualizar el core de Angular

--- a/src/app/pages/player/player.component.html
+++ b/src/app/pages/player/player.component.html
@@ -1,17 +1,12 @@
 <div class="container">
     <mat-toolbar color="primary" class="main-toolbar">
-        <span>Personal Radio</span>
+        <span><a class="text-nonTransform" src="www.shibajidebnath.com" href="https://www.shibajidebnath.com" target="_blank">ShibajiDebnath Radio</a></span>
         <!-- <span class="spacer"></span>
         <span class="toolbar-btn" *ngIf="!auth.authenticated" (click)="auth.login()">LOGIN </span>
         <span class="toolbar-btn" *ngIf="auth.authenticated" (click)="auth.logout()">LOGOUT</span>
         <span class="toolbar-btn" *ngIf="auth.authenticated" routerLink="/profile">PROFILE</span> -->
     </mat-toolbar>
     <div class="content">
-        <div class="logo">
-          <img src="assets/image1.jpg" width="260px" alt="Shibaji Debnath">
-          <!-- <mat-icon>voicemail</mat-icon>
-          <div>Audio Player</div> -->
-      </div>
       <mat-list color="primary">
         <h3 mat-subheader>Playlist</h3>
         <div class="song-list">
@@ -26,7 +21,6 @@
         </div>
       </mat-list>
     </div>
-    <div class="spacer"></div>
     <div class="media-footer">
       <mat-toolbar color="primary">
         <mat-toolbar-row>
