--- a/src/app/pages/player/player.component.scss
+++ b/src/app/pages/player/player.component.scss
@@ -5,9 +5,13 @@
         flex: 1 1 auto;
       }
       .toolbar-btn {
-        font-size: 16px;
+        font-size: 12px;
         margin-right: 5px;
         cursor: pointer;
+      }
+      .text-nonTransform{
+        text-decoration: none;
+        color: white;
       }
     }
   
@@ -15,20 +19,20 @@
       .logo {
         margin: 0.5rem;
         text-align: center;
-        font-size: 24px;
+        font-size: 18px;
         color: #0471d6;
         img{
           background-color: #0471d6;
           padding: .5rem;
         }
         .mat-icon {
-          height: 160px !important;
-          width: 160px !important;
-          font-size: 160px !important;
+          height: 60px !important;
+          width: 60px !important;
+          font-size: 60px !important;
         }
       }
       .song-list{
-        height: 200px;
+        height: 90px;
         overflow: scroll;
       }
     }
@@ -50,9 +54,9 @@
         padding: 2.5rem;
         justify-content: center;
         .mat-icon {
-          height: 48px !important;
-          width: 48px !important;
-          font-size: 48px !important;
+          height: 44px !important;
+          width: 44px !important;
+          font-size: 44px !important;
         }
       }
     }
